added graphics in readme

--- a/Classification-Models/Convolutions Model.ipynb
+++ b/Classification-Models/Convolutions Model.ipynb
@@ -10,16 +10,16 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.8.9"
   },
   "orig_nbformat": 2,
   "kernelspec": {
-   "name": "python369jvsc74a57bd031f2aee4e71d21fbe5cf8b01ff0e069b9275f58929596ceb00d14d90e3e16cd6",
-   "display_name": "Python 3.6.9 64-bit"
+   "name": "python389jvsc74a57bd0f29c44d18ec3966f580757ef6e793c54db2314465323ab3b62385ff34ea2337e",
+   "display_name": "Python 3.8.9 64-bit (windows store)"
   },
   "metadata": {
    "interpreter": {
-    "hash": "31f2aee4e71d21fbe5cf8b01ff0e069b9275f58929596ceb00d14d90e3e16cd6"
+    "hash": "f29c44d18ec3966f580757ef6e793c54db2314465323ab3b62385ff34ea2337e"
    }
   }
  },
